--- a/proj-2/balancebeam/Cargo.toml
+++ b/proj-2/balancebeam/Cargo.toml
@@ -7,19 +7,19 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "3.0.0-beta.1"
-httparse = "1.3"
+clap = { version = "4", features = ["derive"]}
+httparse = "1.8"
 http = "0.2"
 log = "0.4"
-env_logger = "0.7"
+env_logger = "0.10"
 pretty_env_logger = "0.4"
 threadpool = "1.8"
-tokio = { version = "0.2", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
 rand = "0.7"
-parking_lot = "0.10"
+parking_lot = "0.12"
 
 [dev-dependencies]
 nix = "0.17"
-hyper = "0.13"
-reqwest = "0.10"
+hyper = { version = "0.14", features = ["full"]}
+reqwest = "0.11"
 async-trait = "0.1"
